# commit-notifier

./: .gitignore  Cargo.toml  LICENSE  README.md  commit-notifier.nix  flake.nix  shell.nix
.github/workflows/: check.yml  update.yml
modules/services/: commit-notifier.nix
nixos/: commit-notifier.nix
src/: cache.rs  command.rs  condition.rs  error.rs  github.rs  main.rs  message.rs  migration.rs  options.rs  repo.rs  resources.rs  update.rs  utils.rs
src/chat/: mod.rs  paths.rs  resources.rs  results.rs  settings.rs
src/condition/: in_branch.rs  mod.rs  suppress_from_to.rs
src/repo/: cache.rs  mod.rs  paths.rs  resources.rs  results.rs  settings.rs  tasks.rs
