[package]
name = "commit-notifier"
authors = [ "Lin Yinfeng <lin.yinfeng@outlook.com>" ]
version = "0.1.3"
edition = "2021"
description = """
A simple bot tracking commits in branches
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.2", features = [ "macros" ] }
git2 = "0.16.1"
tokio = { version = "1.26.0", features = [ "macros", "rt-multi-thread" ] }
futures = "0.3.27"
rusqlite = "0.28.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
thiserror = "1.0.40"
derive_more = "0.99.17"
clap = { version = "4.1.13", features = [ "cargo", "derive" ] }
regex = "1.7.3"
serde_json = "1.0.94"
serde = "1.0.158"
cron = "0.12.0"
chrono = "0.4.24"
once_cell = "1.17.1"
fs4 = "0.6.3"
octocrab = "0.19.0"
