[package]
name = "commit-notifier"
authors = [ "Lin Yinfeng <lin.yinfeng@outlook.com>" ]
version = "0.1.3"
edition = "2024"
description = """
A simple bot tracking commits in branches
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "*", features = [ "macros" ] }
git2 = "*"
tokio = { version = "*", features = [ "macros", "rt-multi-thread" ] }
futures = "*"
deadpool-sqlite = "*"
rusqlite = "*"
log = "*"
pretty_env_logger = "*"
thiserror = "*"
clap = { version = "*", features = [ "cargo", "derive" ] }
regex = "*"
serde_json = "*"
serde_regex = "*"
serde = "*"
cron = "*"
chrono = "*"
once_cell = "*"
fs4 = "*"
octocrab = "*"
url = "*"
scopeguard = "*"
lockable = "*"
